# Chat-Application

./: .env  Cargo.toml  README.md  docs.txt
src/: client.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  ws.rs
